<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    style="@style/night_page"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@mipmap/exambg"
    tools:context=".BcomHons_QP_TabLayout_Activity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/white"
            android:orientation="vertical"
            android:paddingBottom="10dp">

            <TextView
                android:id="@+id/textView7"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:fontFamily="@font/nunito_extrabold"
                android:gravity="center"
                android:text="@string/bcom_hons_questions_paper"
                android:textColor="#005DFF"
                android:textSize="@dimen/dp_10"
                android:textStyle="bold"
                tools:ignore="MissingConstraints,VisualLintOverlap" />

            <TextView
                android:id="@+id/textBannerMarquee"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/ar_one_sans_medium"
                android:gravity="center"
                android:singleLine="true"
                android:text="@string/qpMessage1"
                android:textColor="#6200EA"
                android:textSize="@dimen/dp_6"
                android:textStyle="bold"
                tools:ignore="HardcodedText" />

            <TextView
                android:id="@+id/textBannerMarquee2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/ar_one_sans_medium"
                android:gravity="center"
                android:singleLine="true"
                android:text="@string/qpMessage2"
                android:textColor="@color/yt_red"
                android:textSize="@dimen/dp_6"
                android:textStyle="bold"
                tools:ignore="HardcodedText" />

            <com.google.android.material.tabs.TabLayout
                android:id="@+id/BcomH_QP_TabLayout"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@color/white"
                app:tabTextColor="@color/black">

                <com.google.android.material.tabs.TabItem
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/_1st" />

                <com.google.android.material.tabs.TabItem
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/_2nd" />

                <com.google.android.material.tabs.TabItem
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/_3rd" />

                <com.google.android.material.tabs.TabItem
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/_4th" />

                <com.google.android.material.tabs.TabItem
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/_5th" />

                <com.google.android.material.tabs.TabItem
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/_6th" />

            </com.google.android.material.tabs.TabLayout>

        </LinearLayout>

        <androidx.viewpager.widget.ViewPager
            android:id="@+id/QP_ViewPager"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:contentDescription="@string/scroll" />

        <!--
        <androidx.fragment.app.FragmentContainerView
            android:id="@+id/fragmentContainerView"
            android:name="com.dusol.thelearnerscommunity.QuestionPapers.BAProg.semester1QuestionPapers"
            tools:layout="@layout/fragment_semester1_question_papers" />
-->


    </LinearLayout>

    <ImageButton
        android:id="@+id/shareOnTelegram"
        android:layout_width="@dimen/dp_30"
        android:layout_height="@dimen/dp_30"
        android:layout_gravity="center"
        android:layout_marginBottom="44dp"
        android:layout_weight="1"
        android:background="@android:color/transparent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.981"
        app:layout_constraintStart_toStartOf="parent"
        app:srcCompat="@mipmap/qpshare" />

</androidx.constraintlayout.widget.ConstraintLayout>